# EDrewcatedGuesser

./: .env.template  .gitignore  Conventions.md  FTCAPI file diagram.drawio  LICENSE.txt  OPR-m.npy  OPRv4.py  README.md  Updates.md  __init__.py  commonresources.py  flushFilesForTransport.ps1  flushGeneratedFiles.ps1  ftcapiv4.ps1  ftcapiv4.sh  gsNeigh.pkl  gsNeigh_mean.npy  gsSVC.pkl  gsSVC_std.npy  init_settings.py  jsonparse.py  line_counter.py  linecounter.py  ml-test.py  prepare-machinelearning.py  pyproject.toml  python_settings.py  requirements.txt  setup.py  sheetsapi.py  todos.md  venvSetup.ps1  viewdata.py
.github/: CONTRIBUTING
Archive2/: profile.json  pythonprofile  team-stats.py
app/: OPR.py  OPRv4.py  __main__.py  common_resources.py  commonresources.py  ftcapi.ps1  ftcapi.sh  ftcapiv4.ps1  gsNeigh.pkl  gsSVC.pkl  init_settings.py  json_parse.py  jsonparse.py  ml-test.py  prepare-machinelearning.py  prepare_machine_learning.py  python_settings.py  sheets_api.py  sheetsapi.py  train_algorithm.py  view_data.py  viewdata.py
docs/: Conventions.md  EDrewcatedGuesser_Default_Flowchart.drawio  FAQs.md  FTCAPI file diagram.drawio  MachineLearningGuide.md  RunningTheProject.md  Setup.md  SetupGoogleSheets.md  StablePackageVersions.md  StatsCalculation.md  Updates.md  todos.md
globaloprs/: OPR-result-sorted.json  OPR-result-sorted.txt  OPR-result-unsorted.txt
machine_learning_backups/: gsNeigh.pkl  gsSVC no tuning.pkl  gsSVC.pkl  gsSVC_recent.pkl
opr/: all-teamids-involved.txt  opr-result-sorted.csv
tests/: correct_files.py  correctfiles.py  test_pep.py  (+4 more)
(+2 files in other folders)
